--- a/Havillah.Api/appsettings.json
+++ b/Havillah.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS; Initial Catalog=HavillahDb; User Id=PublicUser; Password=Password1234!;MultipleActiveResultSets=true;Trust Server Certificate=true"
+  }
 }
